[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-world"
version = "0.1.0"
description = "Generic benchmark-modify-benchmark harness for pipeline optimization"
requires-python = ">=3.11"
dependencies = [
    "click~=8.1",
    "rich~=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.15",
]

[project.scripts]
forge = "forge_world.cli.main:cli"

[tool.setuptools.packages.find]
include = ["forge_world*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
